fix: wrong size of button

--- a/src/styles/Mails.module.css
+++ b/src/styles/Mails.module.css
@@ -39,6 +39,17 @@
     color: #555;
 }
 
+.description {
+    font-size: 1.2rem;
+    color: #666;
+    margin-bottom: 1.5rem;
+    line-height: 1.5;
+    max-width: 500px;
+    /* Begrenze die Breite */
+    margin: 0 auto;
+    /* Zentriere die Beschreibung */
+}
+
 .classContainer {
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -224,9 +235,14 @@
 .popupButtons {
     display: flex;
     justify-content: space-between;
+    position: sticky;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background-color: #fff;
     padding: 1rem;
-    border-top: 1px solid #ddd;
+    border-radius: 8px;
+    border: 1px solid #ddd;
 }
 
 .indicator {
